--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "family-tree",
   "version": "1.0.0",
   "description": "My first very one project using GraphQL",
-  "main": "server.js",
+  "main": "build/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon server.js"
+    "start": "node ./build/index.js",
+    "build": "tsc",
+    "watch": "tsc-watch --onSuccess \"yarn start\""
   },
   "repository": {
     "type": "git",
@@ -23,9 +24,14 @@
   "dependencies": {
     "express": "^4.17.2",
     "express-graphql": "^0.12.0",
-    "graphql": "^16.2.0"
+    "graphql": "^16.2.0",
+    "tsc-watch": "^4.6.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.15"
+    "@types/express": "^4.17.13",
+    "@types/express-graphql": "^0.9.0",
+    "@types/graphql": "^14.5.0",
+    "@types/node": "^17.0.1",
+    "typescript": "^4.5.4"
   }
 }
