--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^4.17.2",
     "express-graphql": "^0.12.0",
     "graphql": "^16.2.0",
+    "mongoose": "^6.1.3",
     "tsc-watch": "^4.6.0"
   },
   "devDependencies": {
