deps: update tsconfig

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,10 +12,14 @@
     "strict": true,                                      /* Enable all strict type-checking options. */
     "noImplicitAny": true,                               /* Enable error reporting for expressions and declarations with an implied `any` type.. */
     "skipLibCheck": true,                                 /* Skip type checking all .d.ts files. */
-    "baseUrl": "src",
+    "sourceMap": true,
+    "moduleResolution": "node",
+    "baseUrl": "./src",
     "paths": {
-      "@models/*": ["models/*"],
-      "@output-types/*": ["output-types/*"],
+      "@models/*": [ "models/*" ],
+      "@output-types/*": [ "output-types/*" ],
     }
-  }
+  },
+  "exclude": [ "node_modules", "build" ],
+  "include": [ "src/**/*.ts" ],
 }
