--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "family-tree",
   "version": "1.0.0",
   "description": "My first very one project using GraphQL",
-  "main": "build/index.js",
+  "main": "build/index",
   "scripts": {
-    "start": "node ./build/index.js",
+    "start": "cross-env TS_NODE_BASEURL=./build node --require tsconfig-paths/register ./build/index.js",
     "build": "tsc",
     "watch": "tsc-watch --onSuccess \"yarn start\""
   },
@@ -33,6 +33,8 @@
     "@types/express-graphql": "^0.9.0",
     "@types/graphql": "^14.5.0",
     "@types/node": "^17.0.1",
+    "cross-env": "^7.0.3",
+    "tsconfig-paths": "^3.12.0",
     "typescript": "^4.5.4"
   }
 }
