--- a/package.json
+++ b/package.json
@@ -25,13 +25,13 @@
     "express": "^4.17.2",
     "express-graphql": "^0.12.0",
     "graphql": "^14.7.0",
-    "mongoose": "^6.1.3",
-    "tsc-watch": "^4.6.0"
+    "mongoose": "^6.1.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.1",
     "cross-env": "^7.0.3",
+    "tsc-watch": "^4.6.0",
     "tsconfig-paths": "^3.12.0",
     "typescript": "^4.5.4"
   }
