--- a/package.json
+++ b/package.json
@@ -30,7 +30,10 @@
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.1",
+    "@typescript-eslint/eslint-plugin": "^5.8.0",
+    "@typescript-eslint/parser": "^5.8.0",
     "cross-env": "^7.0.3",
+    "eslint": "^8.5.0",
     "tsc-watch": "^4.6.0",
     "tsconfig-paths": "^3.12.0",
     "typescript": "^4.5.4"
