--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/BaptisteMartinet/family-tree#readme",
   "dependencies": {
+    "dotenv": "^10.0.0",
     "express": "^4.17.2",
     "express-graphql": "^0.12.0",
     "graphql": "^14.7.0",
