--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,6 +17,8 @@
     ],
     "rules": {
         "@typescript-eslint/no-unused-vars": ["error", { "args": "none" }],
-        "no-trailing-spaces": "error"
+        "no-trailing-spaces": "error",
+        "semi": "warn",
+        "eol-last": "warn"
     }
 }
