--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,7 +17,7 @@
     ],
     "rules": {
         "@typescript-eslint/no-unused-vars": ["error", { "args": "none" }],
-        "no-trailing-spaces": "error",
+        "no-trailing-spaces": "warn",
         "semi": "warn",
         "eol-last": "warn"
     }
