feat: add RelationArgs input type

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,7 @@
     "paths": {
       "@models/*": [ "models/*" ],
       "@output-types/*": [ "output-types/*" ],
+      "@input-types/*": [ "input-types/*" ],
       "@utils/*": [ "utils/*" ],
       "@enums/*": [ "enums/*" ],
     }
